# UChicagoTradingCompetition

./: Makefile  README.md  case1.py  pyproject.toml
DataExploration/: InterestRatesAndTargets.py
lib/: .gitignore  example_bot_case2.py  utc_bot.py
lib/proto/: utc_bot.proto
py/: case1.py  example_bot_case1.py
xchange/: .gitignore
xchange/xchange-v1.0.3/clients/: example_bot_case1.py
